hover pointer works

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>Urban Visualisation</header>
     <nav>
         <div class = "flex-container">
-            <button type="button">Add buildings</button>
-            <button type="button">Remove buildings</button>
-            <button type="button">Update buildings</button>
+            <button type="button" id="addButton">Add buildings</button>
+            <button type="button" id="removeButton">Remove buildings</button>
+            <button type="button" id="updateButton">Update buildings</button>
             <button type="button" id="rotationButton">Enable rotation</button>
             <button type="button">Show heatmap</button>
             <button type="button">Light intensity animation</button>
